--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
+    "react-share": "^5.2.2",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
